<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewState"
            type="org.d3ifcool.hystorms.util.ViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bindVisibilityDataContainer="@{viewState}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/icon_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_edit_profile"
                android:src="@drawable/ic_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_edit_profile"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_edit"
                app:layout_constraintTop_toTopOf="@+id/icon_edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_profile">

            <ImageView
                android:id="@+id/icon_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_change_password"
                android:src="@drawable/ic_vpn_key"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_change_password"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_password"
                app:layout_constraintTop_toTopOf="@+id/icon_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password">

            <ImageView
                android:id="@+id/icon_notification"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_notification"
                android:src="@drawable/ic_notifications"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_notification"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_notification"
                app:layout_constraintTop_toTopOf="@+id/icon_notification" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification">

            <ImageView
                android:id="@+id/icon_help"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_help"
                android:src="@drawable/ic_help_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_help"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_help"
                app:layout_constraintTop_toTopOf="@+id/icon_help" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help">

            <ImageView
                android:id="@+id/icon_info"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_about_us"
                android:src="@drawable/ic_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_app_info"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_info"
                app:layout_constraintTop_toTopOf="@+id/icon_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info">

            <ImageView
                android:id="@+id/icon_exit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_exit_application"
                android:src="@drawable/ic_exit_to_app"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_exit_app"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_exit"
                app:layout_constraintTop_toTopOf="@+id/icon_exit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exit">

            <ImageView
                android:id="@+id/icon_logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/icon_logout"
                android:src="@drawable/ic_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:text="@string/text_logout"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_logout"
                app:layout_constraintTop_toTopOf="@+id/icon_logout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>