<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    app:fitsSystemWindows="true"
    tools:context=".ui.SplashFragment">

    <include layout="@layout/normal_appbarlayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/hystorms_logo"
            android:src="@drawable/logo_hystorms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_text_logo"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/text_hystorms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"
            android:contentDescription="@string/hystroms_text" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/splash_desc"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_text_logo" />

        <Button
            android:id="@+id/btn_login"
            style="Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/green_variant"
            android:text="@string/text_login"
            android:textColor="@color/green_text"
            app:cornerRadius="1000dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_register"
            android:textColor="@color/blue_text"
            app:cornerRadius="1000dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>